--- a/src/ParkitectNexus.AssetMagic.Debug/ParkitectNexus.AssetMagic.Debug.csproj
+++ b/src/ParkitectNexus.AssetMagic.Debug/ParkitectNexus.AssetMagic.Debug.csproj
@@ -4,15 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BB85A8E0-7B30-4292-91BF-6D36C0DA311C}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{9E2AECEC-A259-4CF3-A539-FD8D3B83AFDA}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ParkitectNexus.AssetMagic</RootNamespace>
-    <AssemblyName>ParkitectNexus.AssetMagic</AssemblyName>
+    <RootNamespace>ParkitectNexus.AssetMagic.Debug</RootNamespace>
+    <AssemblyName>ParkitectNexus.AssetMagic.Debug</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -45,17 +48,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Blueprint.cs" />
-    <Compile Include="BlueprintExtractor.cs" />
-    <Compile Include="IBlueprint.cs" />
-    <Compile Include="IBlueprintExtractor.cs" />
-    <Compile Include="InvalidBlueprintException.cs" />
-    <Compile Include="MiniJsonContractResolver.cs" />
-    <Compile Include="MiniJsonFloatConverter.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ParkitectNexus.AssetMagic\ParkitectNexus.AssetMagic.csproj">
+      <Project>{bb85a8e0-7b30-4292-91bf-6d36c0da311c}</Project>
+      <Name>ParkitectNexus.AssetMagic</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
