--- a/src/ParkitectNexus.AssetMagic/ParkitectNexus.AssetMagic.csproj
+++ b/src/ParkitectNexus.AssetMagic/ParkitectNexus.AssetMagic.csproj
@@ -47,12 +47,20 @@
   <ItemGroup>
     <Compile Include="Blueprint.cs" />
     <Compile Include="BlueprintExtractor.cs" />
+    <Compile Include="BlueprintHeader.cs" />
+    <Compile Include="Coaster.cs" />
+    <Compile Include="DataObject.cs" />
+    <Compile Include="DataObjectNameAttribute.cs" />
+    <Compile Include="DataObjectParser.cs" />
+    <Compile Include="FileHeader.cs" />
     <Compile Include="IBlueprint.cs" />
     <Compile Include="IBlueprintExtractor.cs" />
     <Compile Include="InvalidBlueprintException.cs" />
     <Compile Include="MiniJsonContractResolver.cs" />
     <Compile Include="MiniJsonFloatConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TrackedRideStats.cs" />
+    <Compile Include="Utilities\StringUtility.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
