--- a/src/ParkitectNexus.AssetMagic/ParkitectNexus.AssetMagic.csproj
+++ b/src/ParkitectNexus.AssetMagic/ParkitectNexus.AssetMagic.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Blueprint.cs" />
+    <Compile Include="Data\IDataElement.cs" />
     <Compile Include="IBlueprint.cs" />
     <Compile Include="InvalidBlueprintException.cs" />
     <Compile Include="InvalidSavegameException.cs" />
