--- a/src/ParkitectNexus.AssetMagic/ParkitectNexus.AssetMagic.csproj
+++ b/src/ParkitectNexus.AssetMagic/ParkitectNexus.AssetMagic.csproj
@@ -32,7 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\..\..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -47,7 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Blueprint.cs" />
-    <Compile Include="Data\IDataElement.cs" />
+    <Compile Include="Data\IDataWrapper.cs" />
     <Compile Include="IBlueprint.cs" />
     <Compile Include="InvalidBlueprintException.cs" />
     <Compile Include="InvalidSavegameException.cs" />
@@ -67,13 +67,10 @@
     <Compile Include="Streams\BitmapDataStream.cs" />
     <Compile Include="Utilities\AssemblyUtility.cs" />
     <Compile Include="Data\Blueprints\BlueprintHeader.cs" />
-    <Compile Include="Data\Attributes\DataAttribute.cs" />
-    <Compile Include="Data\Attributes\DataAttributeUtility.cs" />
-    <Compile Include="Data\DataElement.cs" />
-    <Compile Include="Data\Attributes\DataElementAttribute.cs" />
-    <Compile Include="Data\DataElementProxy.cs" />
+    <Compile Include="Data\Attributes\WrapPropertyAttribute.cs" />
+    <Compile Include="Data\Attributes\WrapPropertyUtility.cs" />
+    <Compile Include="Data\DataWrapper.cs" />
     <Compile Include="Data\Generic\FileHeader.cs" />
-    <Compile Include="Data\Attributes\IgnoreDataAttribute.cs" />
     <Compile Include="JsonConverters\DictionaryConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Converters\BlueprintConverter.cs" />
